# model_predictive_control_autonomous_car

./: README.md
controller/lat_controller/: LatControllerNode.cpp
controller/lat_controller/acado_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test
controller/lat_controller/config/: lat_control_config.yaml
controller/lat_controller/include/: AcadoLat.hpp  LateralController.hpp  PIDController.hpp
controller/lat_controller/src/: AcadoLat.cpp  LateralController.cpp  PIDController.cpp
controller/long_controller/: LongControllerNode.cpp
controller/long_controller/acado_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test
controller/long_controller/acado_script/: long_mpc.cpp
controller/long_controller/include/: Acado.hpp  LongitudinalController.hpp  LowPass.hpp
controller/long_controller/src/: Acado.cpp  LongitudinalController.cpp  PIDController.cpp
controller/long_controller/test/: TestLongitudinalController.cpp
controller/unified_mpc/: CMakeLists.txt  UnifiedControllerNode.cpp
controller/unified_mpc/acado_mpc_export/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test
controller/unified_mpc/acado_script/: acado_unified_mpc.cpp
controller/unified_mpc/config/: control_config.yaml
controller/unified_mpc/include/: AcadoUnified.hpp  UnifiedController.hpp
controller/unified_mpc/src/: AcadoUnified.cpp  UnifiedController.cpp
